tests/snapshots/render/dumb@commonmark-spec-003-tabs.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/003-tabs.md
snapshot_kind: text
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ a	a                                                                           │
│ ὐ	a                                                                           │
╰──────────────────────────────────────────────────────────────────────────────╯
